modified:   app.js 	modified:   controllers/transactionController.js 	modified:   controllers/userController.js 	modified:   db/db.js 	modified:   docs/components.js 	modified:   docs/swagger.json 	modified:   logs.log 	modified:   middlewares/authMiddleware.js 	modified:   models/BlacklistedToken.js 	modified:   models/Transaction.js 	modified:   models/User.js 	modified:   routes/transactionRoutes.js 	modified:   routes/userRoutes.js 	modified:   swagger.js 	modified:   utils/dateUtils.js 	deleted:    utils/selfPing.js 	modified:   utils/token.js 	modified:   utils/validators.js
